Fix cropped fonts in iOS / MacOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -10861,7 +10861,7 @@ section#contact form#contactForm .form-group {
 section#contact form#contactForm .form-group input,
 section#contact form#contactForm .form-group textarea {
   padding: 2.25rem;
-  line-height:0px;
+  line-height:2em;
 }
 section#contact form#contactForm .form-group input.form-control {
   height: 100px;
